--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SOCKET = http://localhost:9000
 # https://living-nicholle-ieknow.koyeb.app
+SMTP_EMAIL = souravsh1234567@gmail.com
+SMTP_PASSWORD =  bsel txmo tjpo scps
