--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "emoji-picker-react": "^4.7.12",
     "firebase": "^10.7.1",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
+    "nodemailer": "^6.9.9",
     "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
