--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.7.1",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.9",
     "peerjs": "^1.5.2",
     "react": "^18",
