--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-icons": "^4.12.0",
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
