--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0-rc22",
+    "embla-carousel-react": "^8.0.0-rc22",
     "emoji-picker-react": "^4.7.12",
     "firebase": "^10.7.1",
     "lucide-react": "^0.303.0",
