--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "name": "Banter",
-  "short_name": "Banter",
+  "name": "Banterz",
+  "short_name": "Banterz",
   "description": "Chat with strangers and meet new friends in modern,free and random chat rooms, anonymous &#38; No Registration Required.Perfect for Mobile Chats, Girls Chat, Stranger Chats - a great one-on-one chats alternative to Omegle text.",
   "icons": [
     {
